@startuml
title SophiaTech Eats — Domain Class Diagram

' ===== Enums =====
enum DishCategory {
    STARTER
    MAIN_COURSE
    DESSERT
    DRINK
}
enum OrderStatus {
    VALIDATED
    PAID
    CANCELLED
}
enum PaymentMethod {
    EXTERNAL
    STUDENT_CREDIT
}

class Cart {
+createdAt: DateTime
+isRegistered: Boolean
}

class CampusUser {
+name: String
+email: String
+countryOfBirth: String
}

class Restaurant {
+name: String
+cuisineType: String
+priceRange:  String
}

class Dish {
+name: String
+description: String
+price: Money
+category: DishCategory
+type: String
}

class ExtraOption {
+name: String
+price: Money
}

class DietaryTag {
+label: String
}

class Allergy {
+label: String
}

class DeliveryLocation {
+name: String
}

class DeliverySlot {
+startTime: vector<DateTime>
+capacity: int
}

class Order {
+createdAt: DateTime
+status: OrderStatus
}

class OrderItem {
+quantity: int
}

class Payment {
+amount: Money
+method: PaymentMethod
+paidAt: DateTime
}

class StudentCredit {
+monthlyAllowance: Money
+usedAmount: Money
+dueDate: Date
+blocked: boolean
}

' ===== Associations with roles & multiplicities =====

' A Cart contains items and can be converted to an Order by a CampusUser
Cart "1" -- "0..*" OrderItem : contains >\nitems
CampusUser "1" -- "1" Cart : places order from >\ncart

' Users place orders and may hold a student credit account
CampusUser "1" -- "1..*" Order : has >\norderHistory
CampusUser "1" o-- "0..1" StudentCredit : owns >\ncreditAccount
CampusUser "0..*" -- "0..*" Allergy : has >\nallergies

' Restaurant offers dishes and defines delivery slots (capacity per 30 minutes)
Restaurant "1" o-- "1..*" Dish : offers >\nmenu
Restaurant "1" o-- "1..*" DeliverySlot : defines >\navailability

' Dish metadata for filtering and composition
Dish "0..*" -- "0..*" DietaryTag : has >\ndietaryTags
Dish "0..*" o-- "0..*" ExtraOption : offers >\nextraOptions

' Orders are scheduled in a delivery slot and delivered to a predefined delivery location
Order "1" -- "1" DeliverySlot : scheduledIn >\nslot
Order "1" -- "1" DeliveryLocation : deliversTo >\nlocation

' Order contents and payment
Order "1" -- "1..*" OrderItem : contains >\nitems
OrderItem "1" -- "1" Dish : itemOf >\ndish
OrderItem "0..*" -- "0..*" ExtraOption : with >\noptions
Order "1" -- "0..1" Payment : paidBy >\npayment

@enduml